Fixing blurring and styling for loader

--- a/app/static/app/content/styles.css
+++ b/app/static/app/content/styles.css
@@ -130,10 +130,7 @@ abbr[data-original-title] {
 }
 
 #loader h1 {
-    margin-top: 25%;
-    margin-left: 25%;
-    margin-right: 25%;
-    width: 100%;
+
     color: #FFF!important;
 }
 
